# cgtool

./: .gitignore  .hgignore  AnalysisTemplate.cpp  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE.md  Manual.tex  README.md  bond_struct.h  bondset.cpp  bondset.h  cg_map.cpp  cg_map.h  class_map.xml  do_build.sh  frame.cpp  frame.h  main.cpp  main.h  normality.r  parser.cpp  parser.h  traj_process2.kdev4
.github/workflows/: cmake-multi-platform.yml
examples/: cg.cfg  mem.cfg
helpers/: atom_cg_compare.R  normality.R  ramsi_plot.R  view_field.py
include/: GROInput.h  GROOutput.h  LammpsDataOutput.h  LammpsTrjOutput.h  TrjInput.h  XTCInput.h  XTCOutput.h  array.h  boltzmann_inverter.h  bond_struct.h  bondset.h  cg_map.h  cgtool.h  cmd.h  cmd_abstract.h  cmd_simple.h  common.h  field_map.h  file_io.h  frame.h  histogram.h  itp_writer.h  light_array.h  membrane.h  parser.h  ramsi.h  rdf.h  residue.h  small_functions.h  trj_output.h  version.h  xdrfile.h  xdrfile_xtc.h
lib/xdrfile/: xdrfile.c
src/: GROInput.cpp  GROOutput.cpp  LammpsDataOutput.cpp  LammpsTrjOutput.cpp  XTCInput.cpp  XTCOutput.cpp  array.cpp  array.h  arrays.cpp  arrays.h  boltzmann_inverter.cpp  boltzmann_inverter.h  bond_struct.cpp  bond_struct.h  bondset.cpp  bondset.h  cg_map.cpp  cg_map.h  cmd.cpp  cmd.h  cmd_simple.cpp  compile_info.py  csv_test.cpp  field_map.cpp  field_map.h  frame.cpp  frame.h  general.cpp  general.h  histogram.cpp  itp_writer.cpp  itp_writer.h  light_array.cpp  main.cpp  membrane.cpp  parser.cpp  parser.h  ramsi_clean  rdf.cpp  residue.cpp  (+3 more)
src/cgtool/: GROOutput.cpp  GROOutput.h  LammpsDataOutput.cpp  LammpsDataOutput.h  LammpsTrjOutput.cpp  LammpsTrjOutput.h  XTCOutput.cpp  XTCOutput.h  boltzmann_inverter.cpp  boltzmann_inverter.h  bond_struct.cpp  bond_struct.h  bondset.cpp  bondset.h  cgtool.cpp  cgtool.h  histogram.cpp  histogram.h  itp_writer.cpp  itp_writer.h  lammps_data_output.cpp  lammps_data_output.h  lammps_trj_output.cpp  lammps_trj_output.h  non_bondset.cpp  non_bondset.h  rdf.cpp  rdf.h
src/core/: GROInput.cpp  GROInput.h  TrjInput.h  XTCInput.cpp  XTCInput.h  cg_map.cpp  cg_map.h  cmd.cpp  cmd.h  cmd_abstract.h  cmd_simple.cpp  cmd_simple.h  common.cpp  common.h  file_io.h  frame.cpp  frame.h  gro_input.cpp  gro_input.h  gro_output.cpp  gro_output.h  light_array.h  parser.cpp  parser.h  residue.cpp  residue.h  small_functions.cpp  small_functions.h  trj_output.h  xdrfile.c  xdrfile.h  xdrfile_xtc.h  xtc_input.cpp  xtc_input.h  xtc_output.cpp  xtc_output.h
src/main/: cgtool.cpp  common.cpp  ramsi.cpp  thickness.cpp
src/ramsi/: membrane.cpp  membrane.h  ramsi.cpp  ramsi.h
src/tests/: array_test.cpp  bondset_test.cpp  csv_test.cpp  frame_test.cpp  light_array_test.cpp  parser_test.cpp  small_functions_test.cpp
test_data/: bond_angles.csv  bond_dihedrals.csv  bond_lengths.csv  dipoles.csv  james.bond  map.in  npt.gro
test_data/ALLA/: ALLACG.gro  ALLACG.itp  ALLACG.top  ALLACG.xtc  bonds.in  cg.cfg  map.in  npt.gro  npt.xtc  topol.top  tp.config
test_data/lammps/: data.converted_withmasses
test_data/modules/: parser.cfg
test_data/staph/: md.gro  mem.cfg
vagrant/: Vagrantfile
